# mango-llm

./: .gitignore  README.md  baby_llm.py  device.py  full_llm.py  looped.py  main.py  model.py  pyproject.toml  pytorch_rewrite.py
numpy-old/: llm.py  main.py
old/variants/: pytorch_simple.py
src/: constants.py  cross_entropy.py  llm.py  parse_dataset.py  pytorch_check.py  run.py  train.py
src/blocks/: attention.py  embedding.py  feedforward.py  linear.py  transformer.py
