[project]
name = "llm"
version = "0.1.0"
description = "Small LLM written in PyTorch."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch",
    "pandas>=3.0.2",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cuda", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
