[project]
name = "mango-llm"
version = "1.0.2"
description = "LLM written in PyTorch."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch",
    "pandas>=3.0.2",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cuda", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
